ToggleButton has been implemented and used to make the stance button NOT hardcoded. Button Panel has now been tweaked to fix visual layout issues.

--- a/code/RTSHud.razor.scss
+++ b/code/RTSHud.razor.scss
@@ -42,15 +42,17 @@ RTSHud {
     flex-wrap: wrap;
     align-items: stretch;
     align-content: stretch;
-    justify-content: space-evenly;
+    justify-content: left
 }
 
 .dynamicButtonSlot {
     width: 20%;
+    aspect-ratio: 1;
     text-align: left;
     pointer-events: all;
     background-color: black;
-    background-size: contain;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
     border: 1px black;
 }
 
